All_Component_DX/force-app/main/default/objects/Service_Order__c/Service_Order__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Service Order is used to plan, execute and manage Service events for Field and Depot Service activities. Depending upon the service scenario, the order creation can be triggered by many events: When creating a Support Case, when one or more installed products require periodic service or calibration, when troubleshooting a customer problem on the field, if the field service engineer learns that the product requires specialized conditions of a factory/depot to resolve the problem, or when a new/repair shipment to customer requires specialized installation activity.</description>
    <label>Work Order</label>
    <nameField>
        <displayFormat>WO-{00000000}</displayFormat>
        <label>Work Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>