All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Acknowledged_By_Technician_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_By_Technician_Date_Time__c</fullName>
    <description>Date and time when technician acknowledges the scheduled work order</description>
    <inlineHelpText>Date and time when technician acknowledges the scheduled work order</inlineHelpText>
    <label>Acknowledged By Technician Date Time</label>
    <type>DateTime</type>
</CustomField>