All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Actual_Onsite_Response__c.field-meta.xml
<CustomField>
    <fullName>Actual_Onsite_Response__c</fullName>
    <description>Date/time on which customer was onsite responsed as per commitment in SLA.</description>
    <inlineHelpText>Date/time on which customer was onsite responsed as per commitment in SLA.</inlineHelpText>
    <label>Actual Onsite Response</label>
    <type>DateTime</type>
</CustomField>