All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Actual_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Actual_Resolution__c</fullName>
    <description>Date/time on which customer was resolved as per commitment in SLA.</description>
    <inlineHelpText>Date/time on which customer was resolved as per commitment in SLA.</inlineHelpText>
    <label>Actual Resolution</label>
    <type>DateTime</type>
</CustomField>