All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Actual_Restoration__c.field-meta.xml
<CustomField>
    <fullName>Actual_Restoration__c</fullName>
    <description>Date/time on which customer was restored as per commitment in SLA.</description>
    <inlineHelpText>Date/time on which customer was restored as per commitment in SLA.</inlineHelpText>
    <label>Actual Restoration</label>
    <type>DateTime</type>
</CustomField>