All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Age of the service order for reporting purposes.</description>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age of the service order for reporting purposes.</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>