All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Age_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Age_Bucket__c</fullName>
    <description>Age of the service order grouped in buckets for reporting purposes.</description>
    <formula>IF (Age__c &lt;= 7, &quot;Less Than 8 days&quot;, 
IF (Age__c &lt;= 15, &quot;8 To 15 days&quot;, 
IF (Age__c &lt;= 30, &quot;16 to 30 days&quot;, 
&quot;More Than 30 days&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age of the service order grouped in buckets for reporting purposes.</inlineHelpText>
    <label>Age Bucket</label>
    <type>Text</type>
</CustomField>