All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Apply_Business_Hours_For_OptiMax__c.field-meta.xml
<CustomField>
    <fullName>Apply_Business_Hours_For_OptiMax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if Preferred Window for Work Order is based on SLA/Access Hours</description>
    <inlineHelpText>Flag to indicate if Preferred Window for Work Order is based on SLA/Access Hours</inlineHelpText>
    <label>Apply Business Hours For OptiMax</label>
    <type>Checkbox</type>
</CustomField>