All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Appointment_Promised_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Promised_Time_Slot__c</fullName>
    <label>Promised Arrival Window (GMT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>