All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/BatchUpdate__c.field-meta.xml
<CustomField>
    <fullName>BatchUpdate__c</fullName>
    <description>This is an internal field used to resolve conflicts between immediate work order updates and batch updates done by OptiMax.</description>
    <inlineHelpText>This is an internal field used to resolve conflicts between immediate work order updates and batch updates done by OptiMax.</inlineHelpText>
    <label>Batch Update</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>