All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Booked_Appointment_Slot__c.field-meta.xml
<CustomField>
    <fullName>Booked_Appointment_Slot__c</fullName>
    <description>This field stores the slot information of the booked appointment.</description>
    <label>Booked Appointment Slot</label>
    <length>100</length>
    <type>Text</type>
</CustomField>