All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Canceled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Date_Time__c</fullName>
    <description>Date and time when technician rejects or cancels or dispatcher cancels the work order</description>
    <inlineHelpText>Date and time when technician rejects or cancels or dispatcher cancels the work order</inlineHelpText>
    <label>Canceled Date Time</label>
    <type>DateTime</type>
</CustomField>