All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>“City” part of the work order location.</description>
    <inlineHelpText>“City” part of the work order location.</inlineHelpText>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>