All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Clock_Paused_Forever__c.field-meta.xml
<CustomField>
    <fullName>Clock_Paused_Forever__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clock Paused Forever</label>
    <type>Checkbox</type>
</CustomField>