All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer Account initiating this service order. Is a lookup to an existing salesforce account record</description>
    <inlineHelpText>Customer Company initiating this service order. Is a lookup to an existing salesforce account record</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Service_Order</relationshipName>
    <type>Lookup</type>
</CustomField>