All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Serial number of the component for which the customer is seeking support. Is a lookup to an existing installed product record in ServiceMax</description>
    <inlineHelpText>Serial number of the component for which the customer is seeking support. Is a lookup to an existing installed product record in ServiceMax</inlineHelpText>
    <label>Component</label>
    <referenceTo>Installed_Product__c</referenceTo>
    <relationshipName>Service_Order_Component</relationshipName>
    <type>Lookup</type>
</CustomField>