All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Configuration_Before__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Before__c</fullName>
    <description>Snapshot of the product’s technical details before the engineer(s) started addressing it</description>
    <inlineHelpText>Snapshot of the product’s technical details before the engineer(s) started addressing it</inlineHelpText>
    <label>Configuration - Before</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>