All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the contact person from the customer account for this service order. Is a lookup to an existing salesforce contact record</description>
    <inlineHelpText>Name of the contact person from the customer account for this service order. Is a lookup to an existing salesforce contact record</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Service_Order</relationshipName>
    <type>Lookup</type>
</CustomField>