All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action__c</fullName>
    <description>Any corrective action taken by your engineer(s) to address the customer feedback</description>
    <inlineHelpText>Any corrective action taken by your engineer(s) to address the customer feedback</inlineHelpText>
    <label>Corrective Action</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>