All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Customer_Down__c.field-meta.xml
<CustomField>
    <fullName>Customer_Down__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the customer situation is critical affecting uptime due to the problem reported</description>
    <inlineHelpText>If the customer situation is critical affecting uptime due to the problem reported</inlineHelpText>
    <label>Customer Down</label>
    <type>Checkbox</type>
</CustomField>