All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Customer_Down_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Down_Status__c</fullName>
    <description>Indicates as Yes or No if this work order is about a customer down situation.</description>
    <formula>IF (Customer_Down__c = true, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <inlineHelpText>Indicates as Yes or No if this work order is about a customer down situation.</inlineHelpText>
    <label>Customer Down Status</label>
    <type>Text</type>
</CustomField>