All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Dependency_Group__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependency Group</label>
    <referenceTo>Dependency_Management__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>