All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Dispatch_Now__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Now__c</fullName>
    <label>Dispatch Now</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>