All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Dispatch_Priority__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Priority__c</fullName>
    <description>Work order priority bucket as defined in the dispatch process. Calculated automatically</description>
    <label>Dispatch Priority</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>