All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Dispatch_Process__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dispatch process using which this work order will be scheduled</description>
    <label>Dispatch Process</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Service_Order</relationshipName>
    <type>Lookup</type>
</CustomField>