All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Dispatch_Status__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Status__c</fullName>
    <description>Indicates in which stage the work order is in.</description>
    <formula>IF(AND( Service_Group__c=null , Group_Member__c =null),&quot;New&quot;, IF(AND( Service_Group__c&lt;&gt;null , Group_Member__c =null),&quot;Queued&quot;,IF(Group_Member__c &lt;&gt;null,&quot;Assigned&quot;,&apos;New&apos;)))</formula>
    <inlineHelpText>Indicates in which stage the work order is in.</inlineHelpText>
    <label>Dispatch Status</label>
    <type>Text</type>
</CustomField>