All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Driving_Time__c.field-meta.xml
<CustomField>
    <fullName>Driving_Time__c</fullName>
    <label>Driving Time (in Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>