All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Entitlement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Notes__c</fullName>
    <description>Entitlement Notes</description>
    <label>Entitlement Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>