All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Entitlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Type__c</fullName>
    <label>Entitlement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUTO</fullName>
            </value>
            <value>
                <fullName>INTERACTIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>