All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Failed_Assembly__c.field-meta.xml
<CustomField>
    <fullName>Failed_Assembly__c</fullName>
    <description>The assembly of your product that failed.</description>
    <inlineHelpText>The assembly of your product that failed.</inlineHelpText>
    <label>Failed Assembly</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sample Value1</fullName>
            </value>
            <value>
                <fullName>Sample Value2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>