All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Finished_Onsite_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Finished_Onsite_Date_Time__c</fullName>
    <description>Date and time when technician finishes working on the work order at site</description>
    <inlineHelpText>Date and time when technician finishes working on the work order at site</inlineHelpText>
    <label>Finished Onsite Date Time</label>
    <type>DateTime</type>
</CustomField>