All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/First_Assigned_DateTime__c.field-meta.xml
<CustomField>
    <fullName>First_Assigned_DateTime__c</fullName>
    <description>Datetimestamp the work order was assigned to a technician for the very first time.</description>
    <inlineHelpText>Datetimestamp the work order was assigned to a technician for the very first time.</inlineHelpText>
    <label>First Assigned DateTime</label>
    <type>DateTime</type>
</CustomField>