All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/FirstScheduledDateTime__c.field-meta.xml
<CustomField>
    <fullName>FirstScheduledDateTime__c</fullName>
    <description>Datetimestamp the work order was scheduled to a technician for the very first time.</description>
    <inlineHelpText>Datetimestamp the work order was scheduled to a technician for the very first time.</inlineHelpText>
    <label>First Scheduled DateTime</label>
    <type>DateTime</type>
</CustomField>