All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Group_Email__c.field-meta.xml
<CustomField>
    <fullName>Group_Email__c</fullName>
    <description>Stores the email address associated with the service team. Sends email using workflow rule indicating an work order has been queued to the service team.</description>
    <inlineHelpText>Stores the email address associated with the service team. Sends email using workflow rule indicating an work order has been queued to the service team.</inlineHelpText>
    <label>Group Email</label>
    <type>Email</type>
</CustomField>