All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Group_Member__c.field-meta.xml
<CustomField>
    <fullName>Group_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the group member working on the service order. This does not imply that this member has the ownership of service order record</description>
    <inlineHelpText>Name of the group member working on the service order. This does not imply that this member has the ownership of service order record</inlineHelpText>
    <label>Technician</label>
    <referenceTo>Service_Group_Members__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Service_Order</relationshipName>
    <type>Lookup</type>
</CustomField>