All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Idle_Time__c.field-meta.xml
<CustomField>
    <fullName>Idle_Time__c</fullName>
    <description>Idle Time (in Minutes)</description>
    <inlineHelpText>Idle Time (in Minutes)</inlineHelpText>
    <label>Idle Time (in Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>