All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Initial_Response_Customer_By__c.field-meta.xml
<CustomField>
    <fullName>Initial_Response_Customer_By__c</fullName>
    <description>Date/time by which initial response should be delivered as per customer commitment in SLA. Calculated automatically</description>
    <label>Initial Response Customer By</label>
    <type>DateTime</type>
</CustomField>