All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Initial_Response_Internal_By__c.field-meta.xml
<CustomField>
    <fullName>Initial_Response_Internal_By__c</fullName>
    <description>Date/time by which customer should be initial responsed as per internal commitment in SLA.</description>
    <inlineHelpText>Date/time by which customer should be initial responsed as per internal commitment in SLA.</inlineHelpText>
    <label>Initial Response Internal By</label>
    <type>DateTime</type>
</CustomField>