All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Is_Exported__c.field-meta.xml
<CustomField>
    <fullName>Is_Exported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate whether this record is exported.</description>
    <label>Is Exported</label>
    <type>Checkbox</type>
</CustomField>