All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Is_PM_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_PM_Work_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is a preventive maintenance work order or not. Set automatically by PM scheduler</description>
    <label>Is PM Work Order</label>
    <type>Checkbox</type>
</CustomField>