All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Is_Service_Covered__c.field-meta.xml
<CustomField>
    <fullName>Is_Service_Covered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Service Covered</label>
    <type>Checkbox</type>
</CustomField>