All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/IsPartner__c.field-meta.xml
<CustomField>
    <fullName>IsPartner__c</fullName>
    <description>Flag is the indication of Partner Record.</description>
    <formula>IF(  IsPartnerRecord__c  ,&quot;True&quot;, &quot;False&quot;)</formula>
    <inlineHelpText>Flag is the indication of Partner Record.</inlineHelpText>
    <label>Is Partner</label>
    <type>Text</type>
</CustomField>