All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Last_Dispatch_Event__c.field-meta.xml
<CustomField>
    <fullName>Last_Dispatch_Event__c</fullName>
    <description>Indicates various stages of an work order. Used to trigger various dispatch console workflows.</description>
    <inlineHelpText>Indicates various stages of an work order. Used to trigger various dispatch console workflows.</inlineHelpText>
    <label>Last Dispatch Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Worked</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>UnQueued</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>UnScheduled</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>UnAssigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>