All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>Latitude for the work order service location</description>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>