All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Locked_By_DC__c.field-meta.xml
<CustomField>
    <fullName>Locked_By_DC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Locked By DC</description>
    <inlineHelpText>Locked By DC</inlineHelpText>
    <label>Locked By DC</label>
    <type>Checkbox</type>
</CustomField>