All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>Longitude for the work order service location</description>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>