All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Member_Email__c.field-meta.xml
<CustomField>
    <fullName>Member_Email__c</fullName>
    <description>Stores the email address of the technician. Used to send a email through workflow rule indicating an work order has been assigned/scheduled.</description>
    <inlineHelpText>Stores the email address of the technician. Used to send a email through workflow rule indicating an work order has been assigned/scheduled.</inlineHelpText>
    <label>Member Email</label>
    <type>Email</type>
</CustomField>