All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/NoOfTimesAssigned__c.field-meta.xml
<CustomField>
    <fullName>NoOfTimesAssigned__c</fullName>
    <description>Indicating number of times the work order was assigned</description>
    <inlineHelpText>Indicating number of times the work order was assigned</inlineHelpText>
    <label>No Of Times Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>