All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/NoOfTimesQueued__c.field-meta.xml
<CustomField>
    <fullName>NoOfTimesQueued__c</fullName>
    <description>Indicates number of times the work order was queued</description>
    <inlineHelpText>Indicates number of times the work order was queued</inlineHelpText>
    <label>No Of Times Queued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>