All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/NoOfTimesScheduled__c.field-meta.xml
<CustomField>
    <fullName>NoOfTimesScheduled__c</fullName>
    <description>Indicates number of times the work order was scheduled</description>
    <inlineHelpText>Indicates number of times the work order was scheduled</inlineHelpText>
    <label>No Of Times Scheduled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>