All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Number_Of_Times_Queued_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Times_Queued_Bucket__c</fullName>
    <description>Number of times the work order was queued bucket. This is used for reporting purpose.</description>
    <formula>IF ( NoOfTimesQueued__c &lt;=2, &quot;Less Than 2 Times&quot;, IF ( NoOfTimesQueued__c &lt;= 6, &quot;2 To 6 Times&quot;, IF ( NoOfTimesQueued__c &lt;= 10, &quot;6 to 10 Times&quot;, &quot;Over 10 Times&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of times the work order was queued bucket. This is used for reporting purpose.</inlineHelpText>
    <label>Number Of Times Queued Bucket</label>
    <type>Text</type>
</CustomField>