All_Component_DX/force-app/main/default/objects/Service_Order__c/fields/Onsite_Response_Customer_By__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Response_Customer_By__c</fullName>
    <description>Date/time by which onsite response should be delivered as per customer commitment in SLA. Calculated automatically</description>
    <label>Onsite Response Customer By</label>
    <type>DateTime</type>
</CustomField>